--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for Perl extension Net::LDAP::Express.
 
 $Id: Changes,v 1.2 2004/12/04 18:10:20 bronto Exp $
 
+0.11 Mon Dec  6 14:11:14 CET 2004
+     - error in the number of test in 01basic.t: fixed
+
 0.10 Sat Dec  4 18:31:32 CET 2004
      - applied patches from Gordon Lack to do exact searches: exact
        searches are now supported;
